# winner-machine

./: .gitignore  COMMANDES_A_EXECUTER.md  CREER_WORKFLOW_N8N.md  DEPLOIEMENT_COMPLET_MARCUS.md  DEPLOIEMENT_MARCUS_FINAL.md  DEPLOIEMENT_MARCUS_RESUME.md  DEPLOIEMENT_MODULE_C_MARCUS.md  DIAGNOSTIC_CHIFFRES.md  DIAGNOSTIC_N8N_FINAL.md  ETAT_AVANCEMENT_DASHBOARD.md  ETAT_DEPLOIEMENT_MODULE_C.md  EXPLICATION_PRODUITS_MOCK.md  GUIDE_CREATION_WORKFLOW_N8N.md  GUIDE_DEMARRAGE.md  GUIDE_IMPORT_WORKFLOW_N8N.md  INSTRUCTIONS_FINALES_WORKFLOW.md  INSTRUCTIONS_TEST_UI.md  INSTRUCTIONS_WORKFLOW_N8N.md  MODULES_AB_DEPLOYES_MARCUS.md  MODULE_A_IMPLEMENTE.md  MODULE_A_PRODUCTION_READY.md  MODULE_B_IMPLEMENTE.md  MODULE_C_DEPLOYE_SUCCES.md  MODULE_C_IMPLEMENTE.md  MODULE_DE_IMPLEMENTE.md  N8N_WORKFLOWS.md  ORGANISATION_DOSSIERS.md  PIPELINE_DAILY_ABC.md  POURQUOI_PRODUITS_MOCK.md  PROJET_SCAFFOLDED.md  RAPPORT_API_KEEPA_LIMITATIONS.md  RAPPORT_ASIN_CLIQUABLE.md  RAPPORT_CHIFFRES_INCORRECTS.md  RAPPORT_CORRECTION_NORMALISATION.md  RAPPORT_DEBUG_B06XZ9K244.md  RAPPORT_DEBUG_UI.md  RAPPORT_FINAL_API_KEEPA.md  RAPPORT_FINAL_COMPLET.md  RAPPORT_FINAL_DEBUG_B06XZ9K244.md  RAPPORT_FINAL_MIGRATION_MARKETS.md  (+45 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/alembic/: README  env.py
backend/app/: __init__.py  main.py
backend/scripts/: analyze_keepa_price.py  check_discover_stats.py  check_price_in_db.py  debug_stats_current.py  decode_keepa_price.py  diagnostic_prices.py  find_real_price_in_keepa.py  reset_database_clean.py  seed_test_data.py  (+4 more)
(+78 files in other folders)
